name:                tpg-analyser
version:             0.1.0.0
synopsis:            Analyse TPG mobile usage.
homepage:            http://sproul.io
license:             GPL-3
author:              Michael Sproul
maintainer:          micsproul@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules: Data.TPG
  build-depends:    base >=4.8 && <4.9, text, bytestring, lens,
                    wreq, hxt, HandsomeSoup == 0.4.1
  hs-source-dirs: src
  default-language: Haskell2010
